--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-		<form class="form-login" action="#" th:action="@{/api/usuario/acessar}" th:object="${usuario}" method="post">
+		<form class="form-login" action="#" th:action="@{/usuario/acessar}" th:object="${usuario}" method="post">
 			<div class="text-center">
 				<img src="/images/bakery.jpg" class="img-fluid rounded-3" alt="..." />
 			</div>
