--- a/src/main/resources/templates/pages/Login.html
+++ b/src/main/resources/templates/pages/Login.html
@@ -1,43 +1,43 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Login</title>
-    <link rel="stylesheet" href="/css/folhalogin.css">
-    <script src="/js/script.js"></script>
-</head>
-<nav>
-    <a th:href="@{/home}"onclick="goBack()"><img class="back" src="/images/back-button.png" alt=""></a>
-    <h1>GreenCycle</h1>
-    <a th:href="@{/home}"><img class="back2" src="/images/icons8-logout-50.png" alt=""></a>
-
-</nav>
-
-<body class="page-login">
+<!doctype html>
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    
+    <title>Login</title>
+  </head>
+  <body>
     <div class="container">
-        <h1>Login</h1>
-
-        <form id="CadReserva" th:action="@{/acessar}" th:object="${login}" method="post" >
-        
-         
-            <div class="form-group">
-                <label>Usuário:</label>
-                <input type="text" id="email" th:field="*{email}" name="email" >
-            </div>
-            <div class="form-group">
-                <label for="password">Senha:</label>
-                <input type="password" id="senha" th:field="*{senha}" name="senha">
-            </div>
-            <input type="submit" value="Entrar" >
-            <div class="cad" >
-                <a th:href="@{esqueceusenha}" id="esqueci">Esqueci a senha</a>
-                <a th:href="@{cadastro}" id="esqueci">Cadastre-se</a> 
-            </div>
-        </form>
+		<form class="form-login" th:action="@{/usuario/acessar}" th:object="${usuario}" method="post">
+			<div class="text-center">
+				<img src="/images/bakery.jpg" class="img-fluid rounded-3" alt="..." />
+			</div>
+			<div class="my-3 text-center">
+				<span class="fw-bold fs-3">Acesse o sistema</span>
+			</div>
+			<div class="mb-3">
+				<label for="inputEmail" class="form-label fw-bold fs-5">Email:</label>
+				<input type="email" class="form-control text-center fw-bold fs-5" th:field="*{email}"
+					id="inputEmail" aria-describedby="emailHelp">
+			</div>
+			<div class="mb-1">
+				<label for="inputSenha" class="form-label fw-bold fs-5">Senha:</label>
+				<input type="password" class="form-control text-center fw-bold fs-5" th:field="*{senha}"
+					id="inputSenha">
+			</div>
+			<div class="text-center p-2 rounded-2">
+				<span class="fw-bold fs-5 text-danger" th:text="${serverMessage}"></span>
+			</div>
+			<div class="my-3 d-flex justify-content-between">
+				<a th:href="@{/index}" class="btn btn-warning fw-bold fs-5">Voltar</a>
+				<button type="submit" class="btn btn-success fw-bold fs-5">Entrar</button>
+			</div>
+		</form>
     </div>
-
-</body>
-
+    <script type="text/javascript" src="/js/scripts.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
