--- a/src/main/resources/templates/pages/contato.html
+++ b/src/main/resources/templates/pages/contato.html
@@ -21,21 +21,21 @@
             <div class="form-group">
             <div class="agrupar1">
                 <label for="nome">Nome:</label>
-                <input type="text" id="username" name="nome" >
+                <input type="text" id="username" name="nome" th:field="*{text}">
             </div>
             <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" >
+                <input type="email" id="email" name="email" th:field="*{email}">
             </div>
         </div>
             <div class="form-group">
              <div class="agrupar2">
                 <label for="senha">número</label>
-                <input type="tel" id="tel" name="tel"   />
+                <input type="tel" id="tel" name="tel"   th:field="*{email}"/>
             </div>
            
             <label for="mensagem">menssagem:</label>
-            <textarea name="" id="mensage" cols="30" rows="10"></textarea>
+            <textarea name="" id="mensage" cols="30" rows="10" th:field="*{mensagem}"></textarea>
             </div>
 
             <input type="submit" value="Cadastrar" onclick=" check()">
