--- a/src/main/resources/templates/pages/pagina_endereço.html
+++ b/src/main/resources/templates/pages/pagina_endereço.html
@@ -12,10 +12,9 @@
         <div class="interface">
             <!-- Navegação principal -->
             <nav class="nav-1">
-                <a href="#" class="links" onclick="goBack()">Voltar</a>
-                <a href="home.html" class="links">Home</a>
-                <a href="noticia.html" class="links">doações</a>
-                <a href="contato.html" class="links">Contato</a>
+                <a href="@{/home}" class="links">Home</a>
+                <a href="@{/noticia}" class="links">Doações</a>
+                <a href="@{/contato}" class="links">Contato</a>
             </nav>
 
             <!-- Navegação adicional com menu suspenso -->
@@ -24,9 +23,11 @@
                     <li class="dropdown">
                         <a href="#" class="links">Menu</a>
                         <div class="dropdown-content">
-                            <a href="perfil.html">Perfil</a>
-                            <a href="sobre.html">Sobre</a>
-                            <a href="login.html">Login</a>
+
+                            <a href="@{/perfil}">Perfil</a>
+                            <a href="@{/sobre}">Sobre</a>
+                            <a th:href="@{/login}">Login</a>
+                            
                         </div>
                     </li>
                 </ul>
@@ -42,15 +43,15 @@
         <form id="form-compra" action="/finalizar-compra" method="POST">
             <div class="form-group">
                 <label for="nome">Nome Completo</label>
-                <input type="text" id="nome" name="nome" required>
+                <input type="text" id="nome" name="nome" th:field="*{nome}" required>
             </div>
             <div class="form-group">
                 <label for="endereco">Endereço</label>
-                <input type="text" id="endereco" name="endereco" required>
+                <input type="text" id="endereco" name="endereco" th:field="*{endereço}" required>
             </div>
             <div class="form-group">
                 <label for="cidade">Cidade</label>
-                <input type="text" id="cidade" name="cidade" required>
+                <input type="text" id="cidade" name="cidade" th:field="*{cidade}" required>
             </div>
             <div class="form-group">
                 <label for="estado">Estado</label>
