--- a/src/main/resources/templates/pages/index/contacts.html
+++ b/src/main/resources/templates/pages/index/contacts.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Home - Brand</title>
+  <title>Contacts - Brand</title>
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Inter:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800&amp;display=swap">
@@ -29,236 +29,23 @@
       <div class="collapse navbar-collapse" id="navcol-1"
         style="margin-left: -117px;padding-right: 11px;padding-left: 115px;">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item"><a class="nav-link active" th:href="@{/index}">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="@{/services}">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
           <li class="nav-item"></li>
           <li class="nav-item"></li>
-          <li class="nav-item"><a class="nav-link" th:href="@{/contacts}">Contacts</a></li>
+          <li class="nav-item"><a class="nav-link active" href="contacts.html">Contacts</a></li>
         </ul>
         <section></section>
         <div class="dropdown" style="padding-right: 0px;margin-right: 28px;"><a class="dropdown-toggle"
-            aria-expanded="false" aria-haspopup="true" data-bs-toggle="dropdown" href="#" style="margin-left: 6px;">Menu</a>
-          <div class="dropdown-menu"><a class="dropdown-item" th:href="@{/perfil}">Perfil</a><a class="dropdown-item" href="#">Sobre
-              nos</a><a class="dropdown-item" th:href="@{/login}">Administração</a></div>
+            aria-expanded="false" data-bs-toggle="dropdown" href="#" style="margin-left: 6px;">Menu</a>
+          <div class="dropdown-menu"><a class="dropdown-item" href="#">Perfil</a><a class="dropdown-item" href="#">Sobre
+              nos</a><a class="dropdown-item" href="login.html">Administração</a></div>
         </div>
       </div>
     </div>
   </nav>
-  <header class="bg-dark">
-    <div class="container pt-4 pt-xl-5">
-      <div class="row pt-5">
-        <div class="col-md-8 col-xl-6 text-center text-md-start mx-auto">
-          <div class="text-center">
-            <p class="fw-bold text-success mb-2" style="margin-top: -1px;">GreenCycle</p>
-            <h1 class="fw-bold">A sua empresa que se preocupa com meio ambiente</h1>
-          </div>
-        </div>
-        <div class="col-12 col-lg-10 mx-auto">
-          <div class="position-relative" style="display: flex;flex-wrap: wrap;justify-content: flex-end;">
-            <div style="position: relative;flex: 0 0 45%;transform: translate3d(-15%, 35%, 0);"></div>
-            <div style="position: relative;flex: 0 0 45%;transform: translate3d(-5%, 20%, 0);"></div>
-            <div style="position: relative;flex: 0 0 60%;transform: translate3d(0, 0%, 0);"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-  <section class="py-4 py-xl-5">
-    <div class="container" style="background: var(--bs-body-color);border-color: var(--bs-body-color);">
-      <div class="py-4 py-xl-5" style="background: #27262e;border-color: var(--bs-body-bg);">
-        <div class="container" style="border-color: var(--bs-body-bg);">
-          <div
-            class="text-dark bg-light border rounded border-0 border-light d-flex flex-column justify-content-between flex-lg-row p-4 p-md-5"
-            style="background: var(--bs-body-bg);">
-            <div class="pb-2 pb-lg-1">
-              <h2 class="fw-bold mb-2">Faça seu cadastro</h2>
-              <p class="mb-0">Faça parte do nosso time para ajudar o meio ambiente</p>
-            </div>
-            <div class="my-2"><a class="btn btn-primary fs-5 py-2 px-4" role="button" th:href="@{/cadastrar}">Cadastro</a></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <section></section>
-  </section>
   <section class="py-5">
-    <div class="container text-center py-5">
-      <h1 style="text-align: center;">Categoria
-      </h1>
-      <p class="text-muted">Algumas categorias dispoviveis no app
-      </p>
-      <section class="site-media-slider">
-        <div class="card-group">
-          <div class="card"><img class="card-img-top w-100 d-block" width="372" height="191"
-              src="assets/img/adubo-1.jpg" style="padding-right: 15px;" />
-            <div class="card-body">
-              <h4 class="card-title">Adubo</h4>
-            </div>
-          </div>
-          <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/muda-1.jpg" width="372" height="188"
-              style="padding-right: 10px;" />
-            <div class="card-body">
-              <h4 class="card-title">Semente</h4>
-            </div>
-          </div>
-          <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/semente-1.jpg" width="372"
-              height="190" style="padding-left: 5px;" />
-            <div class="card-body">
-              <h4 class="card-title">Semente</h4>
-            </div>
-          </div>
-        </div>
-
-      </section><a href="#"> </a><a href="#"> </a>
-    </div>
-  </section>
-  <section>
-    <div class="container bg-dark py-5">
-      <div class="row">
-        <div class="col-md-8 col-xl-6 text-center mx-auto">
-          <p class="fw-bold text-success mb-2">Objetivo</p>
-          <h3 class="fw-bold">Um pouco de quem somos</h3>
-        </div>
-      </div>
-      <div class="py-5 p-lg-5">
-        <div class="row row-cols-1 row-cols-md-2 mx-auto" style="max-width: 900px;">
-          <div class="col mb-5">
-            <div class="card shadow-sm">
-              <div class="card-body px-4 py-5 px-md-5">
-                <h5 class="fw-bold card-title">Primeiros passos</h5>
-                <h5 class="fw-bold card-title"></h5>
-                <h5 class="fw-bold card-title"></h5>
-                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis.
-                  Bibendum vulputate cras aenean.</p><button class="btn btn-primary shadow" type="button">Learn
-                  more</button>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-5">
-            <div class="card shadow-sm">
-              <div class="card-body px-4 py-5 px-md-5">
-                <h5 class="fw-bold card-title">Como arrecados?</h5>
-                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis.
-                  Bibendum vulputate cras aenean.</p><button class="btn btn-primary shadow" type="button">Learn
-                  more</button>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-4">
-            <div class="card shadow-sm">
-              <div class="card-body px-4 py-5 px-md-5">
-                <div class="bs-icon-lg d-flex justify-content-center align-items-center mb-3 bs-icon"
-                  style="top: 1rem;right: 1rem;position: absolute;"></div>
-                <h5 class="fw-bold card-title">Porque desse projeto?</h5>
-                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis.
-                  Bibendum vulputate cras aenean.</p><button class="btn btn-primary shadow" type="button">Learn
-                  more</button>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-4">
-            <div class="card shadow-sm">
-              <div class="card-body px-4 py-5 px-md-5">
-                <h5 class="fw-bold card-title">Foco no futuro</h5>
-                <p class="text-muted card-text mb-4">Erat netus est hendrerit, nullam et quis ad cras porttitor iaculis.
-                  Bibendum vulputate cras aenean.</p><button class="btn btn-primary shadow" type="button">Learn
-                  more</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section>
     <div class="container py-5">
-      <div class="mx-auto" style="max-width: 900px;">
-        <div class="row row-cols-1 row-cols-md-2 d-flex justify-content-center">
-          <div class="col mb-4">
-            <div class="card bg-primary-light">
-              <div class="card-body text-center px-4 py-5 px-md-5">
-                <p class="fw-bold text-primary card-text mb-2">Fully Managed</p>
-                <h5 class="fw-bold card-title mb-3">Lorem ipsum dolor sit&nbsp;nullam et quis ad cras porttitor</h5>
-                <button class="btn btn-primary btn-sm" type="button">Learn more</button>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-4">
-            <div class="card bg-secondary-light">
-              <div class="card-body text-center px-4 py-5 px-md-5">
-                <p class="fw-bold text-secondary card-text mb-2">Fully Managed</p>
-                <h5 class="fw-bold card-title mb-3">Lorem ipsum dolor sit&nbsp;nullam et quis ad cras porttitor</h5>
-                <button class="btn btn-secondary btn-sm" type="button">Learn more</button>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-4">
-            <div class="card bg-info-light">
-              <div class="card-body text-center px-4 py-5 px-md-5">
-                <p class="fw-bold text-info card-text mb-2">Fully Managed</p>
-                <h5 class="fw-bold card-title mb-3">Lorem ipsum dolor sit&nbsp;nullam et quis ad cras porttitor</h5>
-                <button class="btn btn-info btn-sm" type="button">Learn more</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="py-5 mt-5">
-    <div class="container py-5">
-      <div class="row mb-5">
-        <div class="col-md-8 col-xl-6 text-center mx-auto">
-          <p class="fw-bold text-success mb-2">Testimonials</p>
-          <h2 class="fw-bold"><strong>What People Say About us</strong></h2>
-          <p class="text-muted">No matter the project, our team can handle it.&nbsp;</p>
-        </div>
-      </div>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 d-sm-flex justify-content-sm-center">
-        <div class="col mb-4">
-          <div class="d-flex flex-column align-items-center align-items-sm-start">
-            <p class="bg-dark border rounded border-dark p-4">Nisi sit justo faucibus nec ornare amet, tortor torquent.
-              Blandit class dapibus, aliquet morbi.</p>
-            <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50"
-                src="assets/img/team/avatar2.jpg">
-              <div>
-                <p class="fw-bold text-primary mb-0">John Smith</p>
-                <p class="text-muted mb-0">Erat netus</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="d-flex flex-column align-items-center align-items-sm-start">
-            <p class="bg-dark border rounded border-dark p-4">Nisi sit justo faucibus nec ornare amet, tortor torquent.
-              Blandit class dapibus, aliquet morbi.</p>
-            <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50"
-                src="assets/img/team/avatar4.jpg">
-              <div>
-                <p class="fw-bold text-primary mb-0">John Smith</p>
-                <p class="text-muted mb-0">Erat netus</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col mb-4">
-          <div class="d-flex flex-column align-items-center align-items-sm-start">
-            <p class="bg-dark border rounded border-dark p-4">Nisi sit justo faucibus nec ornare amet, tortor torquent.
-              Blandit class dapibus, aliquet morbi.</p>
-            <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50"
-                src="assets/img/team/avatar5.jpg">
-              <div>
-                <p class="fw-bold text-primary mb-0">John Smith</p>
-                <p class="text-muted mb-0">Erat netus</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="py-5">
-    <div class="container">
       <div class="row mb-5">
         <div class="col-md-8 col-xl-6 text-center mx-auto">
           <p class="fw-bold text-success mb-2">Contacts</p>
@@ -383,6 +170,7 @@
     </div>
   </footer>
   <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/script.min.js"></script>
 </body>
 
 </html>
