--- a/src/main/resources/templates/usuario-editar.html
+++ b/src/main/resources/templates/usuario-editar.html
@@ -14,8 +14,8 @@
 <body>
     <div class="container">
         <div class="container my-5">
-            <form class="row g-3 shadow form-cad" action="#" enctype="multipart/form-data" 
-            th:action="@{/usuario/inativar/{id}(id=*{id})}" th:object="${usuario}" method="post">
+            <!--<form class="row g-3 shadow form-cad" action="#" enctype="multipart/form-data" 
+            th:action="@{/usuario/inativar/{id}(id=*{id})}" th:object="${usuario}" method="post">-->
               
               	<div class="form-group col-md-12">
 					<label for="preView" class="form-label">Foto:</label>
@@ -52,7 +52,7 @@
                   	<button type="submit" class="btn btn-danger shadow">Inativar Conta de Usuário<i class="bi bi-save ms-2"></i></button>
                 </div>
               </form>
-        </div>
+        </div>-->
 
     </div>
     <script type="text/javascript" src="/js/scripts.js"></script>
