--- a/src/main/resources/templates/pages/perfil.html
+++ b/src/main/resources/templates/pages/perfil.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil do Usuário</title>
-    <link rel="stylesheet" href="/css/universalStyle.css"> <!-- Inclua o CSS padrão aqui -->
+      <link rel="stylesheet" href="/css/styles.min.css">
+      <link rel="stylesheet" href="/css/bootstrap.min.css">   
     <script src="/js/script.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/script.min.js"></script>
     <style>
+  body{
+	  color:black
+  }
+    
         .profile-container {
             max-width: 800px;
             margin: 20px auto;
@@ -130,62 +137,51 @@
     </style>
 </head>
 <body>
-<header class="search-header">
-    <div class="search-container">
-        <input type="text" id="search" placeholder="Pesquisar...">
-        <button type="button" id="search-button" onclick="filtro()">Buscar</button>
+
+
+
+	<nav class="navbar navbar-expand-md sticky-top py-3 navbar-dark" id="mainNav">
+    <div class="container"><a class="navbar-brand d-flex align-items-center" href="/"><span
+          class="bs-icon-sm bs-icon-circle bs-icon-primary shadow d-flex justify-content-center align-items-center me-2 bs-icon"><svg
+            xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16"
+            class="bi bi-bezier">
+            <path fill-rule="evenodd"
+              d="M0 10.5A1.5 1.5 0 0 1 1.5 9h1A1.5 1.5 0 0 1 4 10.5v1A1.5 1.5 0 0 1 2.5 13h-1A1.5 1.5 0 0 1 0 11.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm10.5.5A1.5 1.5 0 0 1 13.5 9h1a1.5 1.5 0 0 1 1.5 1.5v1a1.5 1.5 0 0 1-1.5 1.5h-1a1.5 1.5 0 0 1-1.5-1.5zm1.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM6 4.5A1.5 1.5 0 0 1 7.5 3h1A1.5 1.5 0 0 1 10 4.5v1A1.5 1.5 0 0 1 8.5 7h-1A1.5 1.5 0 0 1 6 5.5zM7.5 4a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z">
+            </path>
+            <path
+              d="M6 4.5H1.866a1 1 0 1 0 0 1h2.668A6.517 6.517 0 0 0 1.814 9H2.5c.123 0 .244.015.358.043a5.517 5.517 0 0 1 3.185-3.185A1.503 1.503 0 0 1 6 5.5zm3.957 1.358A1.5 1.5 0 0 0 10 5.5v-1h4.134a1 1 0 1 1 0 1h-2.668a6.517 6.517 0 0 1 2.72 3.5H13.5c-.123 0-.243.015-.358.043a5.517 5.517 0 0 0-3.185-3.185z">
+            </path>
+          </svg></span><span>GreenCycle</span></a><button data-bs-toggle="collapse" class="navbar-toggler"
+        data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span
+          class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navcol-1"
+        style="margin-left: -117px;padding-right: 11px;padding-left: 115px;">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item"><a class="nav-link" th:href="@{/index}">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="@{/services}">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="@{/contacts}">Contacts</a></li>
+        </ul>
+        <section></section>
+        <div class="dropdown" style="padding-right: 0px;margin-right: 28px;"><a class="dropdown-toggle"
+            aria-expanded="false" data-bs-toggle="dropdown" href="#" style="margin-left: 6px;">Menu</a>
+          <div class="dropdown-menu"><a class="dropdown-item" th:href="@{/perfil}">Perfil</a><a class="dropdown-item" th:href="@{/sobre}">Sobre
+              nos</a><a class="dropdown-item" href="@{/login}">Administração</a></div>
+        </div>
+      </div>
     </div>
-</header>
-<!-- Cabeçalho da página -->
-
-<!--
-<header>
-    <div class="interface">
-        
-        <nav class="nav-1">
-            <a href="home.html" class="links">Home</a>
-            <a href="noticia.html" class="links">Doações</a>
-            <a href="contato.html" class="links">Contato</a>
-        </nav>
-
-        
-        <nav class="navbar">
-            <ul class="nav-list">
-                <li class="dropdown">
-                    <a href="#" class="links">Menu</a>
-                    <div class="dropdown-content">
-
-                        <a href="perfil.html">Perfil</a>
-                        <a href="sobre.html">Sobre</a>
-                        <a href="login.html">Login</a>
-
-                    </div>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
--->
-
-	<div th:replace="~{fragments :: cabecalho}"></div>
-
+  </nav>
     <div class="profile-container">
         <div class="profile-header">
             <img id="profile-avatar" src="avatar.jpg" alt="Avatar do Usuário">
             <div>
-                <h1 id="profile-name">Nome do Usuário: <span th:text="${session.usuarioLogado.nome}"></span></h1>
-                <p id="profile-email">Email: <span th:text="${session.usuarioLogado.email}"></span></p>
-                <p id="profile-phone">Acesso: <span th:text="${session.usuarioLogado.nivelAcesso}"></span></p>
+            
+                <h1 id="profile-name">Nome do Usuário: <span></span></h1>
+                <p id="profile-email">Email: <span></span></p>
+                <p id="profile-phone">Acesso: <span ></span></p>
+             
             </div>
         </div>
-        <div class="profile-details">
-            <label for="address">Endereço:</label>
-            <p id="profile-address">Rua Exemplo, 123 - Bairro Exemplo</p>
-            
-            <label for="dob">Data de Nascimento:</label>
-            <p id="profile-dob">01/01/1990</p>
-
-
+        
         <div class="profile-actions">
             <button onclick="toggleEditForm()">Editar Perfil</button>
             <button onclick="toggleDeleteConfirmation()">Excluir Perfil</button>
@@ -194,26 +190,13 @@
         <div class="edit-profile-form" id="edit-profile-form">
             <h2>Editar Perfil</h2>
             <label for="edit-avatar">Foto de Perfil:</label>
-            <input type="file" id="edit-avatar" accept="image/*" onchange="previewImage(event)">
+            <input type="file" id="edit-avatar" accept="image/*"  onchange="previewImage(event)">
             <img id="preview-avatar" style="display: none; width: 100px; height: 100px; border-radius: 50%; margin-top: 10px; object-fit: cover;">
             
             <label for="edit-name">Nome:</label>
             <input type="text" id="edit-name" value="Nome do Usuário">
             
-            <label for="edit-email">Email:</label>
-            <input type="email" id="edit-email" value="usuario@example.com">
-            
-            <label for="edit-phone">Telefone:</label>
-            <input type="text" id="edit-phone" value="(11) 1234-5678">
-            
-            <label for="edit-address">Endereço:</label>
-            <input type="text" id="edit-address" value="Rua Exemplo, 123 - Bairro Exemplo">
-            
-            <label for="edit-dob">Data de Nascimento:</label>
-            <input type="date" id="edit-dob" value="1990-01-01">
-            
-
-            
+         
             <button onclick="saveProfile()">Salvar</button>
         </div>
 
