--- a/src/main/resources/templates/pages/index/index.html
+++ b/src/main/resources/templates/pages/index/index.html
@@ -40,7 +40,7 @@
             aria-expanded="false" data-bs-toggle="dropdown" href="#" style="margin-left: 6px;">Menu</a>
           <div class="dropdown-menu"><a class="dropdown-item" th:href="#">Perfil</a>
           <a class="dropdown-item" th:href="#">Sobre nos</a>
-          <a class="dropdown-item" th:href="@{/usuario/login}">Administração</a></div>
+          <a class="dropdown-item" th:href="@{/login}">Administração</a></div>
         </div>
       </div>
     </div>
